--- a/src/Weather.css
+++ b/src/Weather.css
@@ -26,9 +26,11 @@
 }
 
 .Weather img {
-  height: 60px;
+  height: 80px;
   margin-right: 10px;
+  padding-bottom: 10px;
   float: left;
+  align-items: center;
 }
 
 .Weather .temperature {
