--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,5 +1,10 @@
 .Weather {
-  border: 1px solid #dbdbdb;
+  background: linear-gradient(
+    179.5deg,
+    rgb(255, 241, 149) 3.3%,
+    rgb(255, 177, 108) 96%
+  );
+  border: 1px solid #fecf7e;
   border-radius: 5px;
   font-family: arial;
   color: #959595;
