Updated user interface

--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,9 @@
   font-size: 12px;
   margin: 10px 0;
   text-align: center;
-  color: #ff912b;
+  color: #81b1e9;
 }
 
 a {
-  color: #ff912b;
+  color: #81b1e9;
 }
